# mandelbrot_101

./: .gitignore  Chapter_2_More_Interesting_Functions.ipynb  README.md  helpers.py  pyproject.toml  run.py
notebooks/: Chapter_1_Functions.ipynb  Chapter_3_Actually_Interesting.ipynb
